# JuliaSet

./: .gitattributes  CMakeLists.txt  README.md  fragment.glsl
headers/: constants.hpp  functions.hpp  globals.hpp  glsl.h  shaders.hpp
include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: functions.cpp  glad.c  globals.cpp  main.cpp  shaders.cpp
